# fast-tsp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  about.rst  comparisons.rst  conf.py  fast_tsp.rst  index.rst  make.bat  usage.rst
src/: main.cpp  tsp.h
src/fast_tsp/: __init__.py
tests/: basic_test.py  test_basic.py
